Chapter06/thoughts_backend/kubernetes/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: users-backend-ingress
    namespace: example
spec:
    rules:
        - host: users.example.local
          http:
            paths:
              - backend:
                  service:
                    name: users-service
                    port:
                      number: 80
                path: /
                pathType: Prefix
